--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@motionone/utils": "^10.18.0",
     "@octokit/rest": "^21.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@splinetool/react-spline": "^4.0.0",
@@ -35,7 +38,8 @@
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-three-fiber": "^6.0.13",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "zod": "^3.25.28"
   },
